--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="/images/steep-karst-cliffs-of-el-nido-in-palawan.jpg" alt="Steep Karst cliffs of El Nido in Palawan">
+          <img src="./images/steep-karst-cliffs-of-el-nido-in-palawan.jpg" alt="Steep Karst cliffs of El Nido in Palawan">
           <div class="container">
             <div class="carousel-caption text-left">
               <h1>Island Hopping Tour</h1>
@@ -64,7 +64,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/images/chocolatehills.jpg" alt="Chocolate hills of of the Island Bohol">
+          <img src="./images/chocolatehills.jpg" alt="Chocolate hills of of the Island Bohol">
           <div class="container">
             <div class="carousel-caption">
               <h1>Chocolate Hills</h1>
@@ -74,7 +74,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img src="/images/rice_terraces_ifugao.jpg" alt="Rice terraces of Ifugao">
+          <img src="./images/rice_terraces_ifugao.jpg" alt="Rice terraces of Ifugao">
           <div class="container">
             <div class="carousel-caption text-right">
               <h1>Ifugao Rice Terraces</h1>
