All slides left. Added favicon.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Week 4</title>
+  <title>It's More Fun in the Philippines</title>
 
-  <meta name="description" content="">
+  <meta name="description" content="Become inspired to travel to the Philippines. Discover fantastic things to do, places to go and more.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="css/styles.css">
+  <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
@@ -19,8 +20,10 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Carousel</a>
+    <nav class="navbar navbar-expand-md fixed-top navbar-light" style="background-color: white;">
+      <a class="navbar-brand" href="#">
+  <img src="./images/logo2.png" width="125" class="d-inline-block align-top" alt="It's More Fun In The Philippines Logo">
+</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -66,7 +69,7 @@
         <div class="carousel-item">
           <img src="./images/chocolatehills.jpg" alt="Chocolate hills of of the Island Bohol">
           <div class="container">
-            <div class="carousel-caption">
+            <div class="carousel-caption text-left">
               <h1>Chocolate Hills</h1>
               <p>The Chocolate Hills are a geological formation in the Bohol province of the Philippines.</p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
@@ -76,7 +79,7 @@
         <div class="carousel-item">
           <img src="./images/rice_terraces_ifugao.jpg" alt="Rice terraces of Ifugao">
           <div class="container">
-            <div class="carousel-caption text-right">
+            <div class="carousel-caption text-left">
               <h1>Ifugao Rice Terraces</h1>
               <p>The mountains of the Ifugao province have been cultivated for thousands of years with terraced fields where rice is farmed. </p>
               <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
