4 columns for marketing, images added and text

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </ul>
         <form class="form-inline mt-2 mt-md-0">
           <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-          <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+          <button class="btn btn-warning my-2 my-sm-0" type="submit">Search</button>
         </form>
       </div>
     </nav>
@@ -62,7 +62,7 @@
             <div class="carousel-caption text-left">
               <h1>Island Hopping Tour</h1>
               <p>Discover parts of Palawan that are only accessible by boat on an island hopping tour from El Nido. </p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">More Info</a></p>
+              <p><a class="btn btn-warning btn-sm" href="#" role="button">More Info</a></p>
             </div>
           </div>
         </div>
@@ -72,7 +72,7 @@
             <div class="carousel-caption text-left">
               <h1>Chocolate Hills</h1>
               <p>The Chocolate Hills are a geological formation in the Bohol province of the Philippines.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <p><a class="btn btn-warning btn-sm" href="#" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -82,7 +82,7 @@
             <div class="carousel-caption text-left">
               <h1>Ifugao Rice Terraces</h1>
               <p>The mountains of the Ifugao province have been cultivated for thousands of years with terraced fields where rice is farmed. </p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <p><a class="btn btn-warning btn-sm" href="#" role="button">Learn more</a></p>
             </div>
           </div>
         </div>
@@ -104,26 +104,32 @@
 
     <div class="container marketing">
 
-      <!-- Three columns of text below the carousel -->
+      <!-- Four columns of text below the carousel -->
       <div class="row">
-        <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-          <h2>Heading</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-        <div class="col-lg-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+        <div class="col-lg-3">
+          <img src="./images/Palawan.jpg" alt="A man and a woman snorkeling in the ocean." class="bd-placeholder-img rounded-circle" width="140" height="140">
+          <h2>Adventure</h2>
+          <p>From bustling cities to stunning beaches and mountains, the Philippines has a lot to offer adventurous explorers.</p>
+          <p><a class="btn btn-secondary" href="#" role="button">Learn More &raquo;</a></p>
+        </div><!-- /.col-lg-3 -->
+        <div class="col-lg-3">
+          <img src="./images/Ilocos_norte.jpg" alt="Picture of Ilocos Norte." class="bd-placeholder-img rounded-circle" width="140" height="140">
+          <h2>History</h2>
+          <p>The Philippines is full of things to see and do — including museums, parks, theaters, shopping malls and a plethora of restaurants to choose from. </p>
+          <p><a class="btn btn-secondary" href="#" role="button">Learn More &raquo;</a></p>
+        </div><!-- /.col-lg-3 -->
+        <div class="col-lg-3">
+          <img src="./images/singkil.jpg" alt="Dancers performing Singkil dance." class="bd-placeholder-img rounded-circle" width="140" height="140">
+          <h2>Culture</h2>
+          <p>Philippine folk dancing is a true reflection of daily life in past centuries while enchanting modern audiences at the same time.</p>
+          <p><a class="btn btn-secondary" href="#" role="button">Learn More &raquo;</a></p>
+        </div><!-- /.col-lg-3 -->
+        <div class="col-lg-3">
+          <img src="./images/halohalo.jpg" alt="Halo-halo a traditional Filipino dessert." class="bd-placeholder-img rounded-circle" width="140" height="140">
+          <h2>Cuisine</h2>
+          <p>Filipino cuisine has developed from the different cultures that shaped its history, with heavy Spanish influence.</p>
+          <p><a class="btn btn-secondary" href="#" role="button">Learn More &raquo;</a></p>
+        </div><!-- /.col-lg-3 -->
       </div><!-- /.row -->
 
 
