Featurette: images, text

--- a/index.html
+++ b/index.html
@@ -45,10 +45,12 @@
         </form>
       </div>
     </nav>
+    <div class="alert alert-warning" role="alert">
+  This is a warning alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
+  </div>
   </header>
 
   <main role="main">
-
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -81,7 +83,7 @@
           <div class="container">
             <div class="carousel-caption text-left">
               <h1>Ifugao Rice Terraces</h1>
-              <p>The mountains of the Ifugao province have been cultivated for thousands of years with terraced fields where rice is farmed. </p>
+              <p>The mountains of the Ifugao province have been cultivated for thousands of years. </p>
               <p><a class="btn btn-warning btn-sm" href="#" role="button">Learn more</a></p>
             </div>
           </div>
@@ -139,11 +141,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Visas, Customs and Quarantine FAQ</h2>
+          <p class="lead">Learn about the Filipino visa, customs and quarantine regulations. This includes types of visa applications, what to declare and...</p>
         </div>
         <div class="col-md-5">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+          <img src="./images/travelimage.jpg" class="img-fluid" alt="Travel gear">
         </div>
       </div>
 
@@ -151,11 +153,11 @@
 
       <div class="row featurette">
         <div class="col-md-7 order-md-2">
-          <h2 class="featurette-heading">Oh yeah, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Facts and Planning</h2>
+          <p class="lead">Travelling in the Philippines is relatively safe and easy, but planning ahead will help you make the most of your holiday.</p>
         </div>
         <div class="col-md-5 order-md-1">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+          <img src="./images/backpacker.jpg" class="img-fluid" alt="Woman with backpack viewing mountain.">
         </div>
       </div>
 
@@ -163,11 +165,11 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">Find a Travel Agent</h2>
+          <p class="lead">A Filipino Specialist has the experience to help you plan and book every detail of your Filipino vacation.</p>
         </div>
         <div class="col-md-5">
-          <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 500x500"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
+          <img src="./images/pexels-gerald-yambao-2413238.jpg" class="img-fluid" alt="Boy ziplining into water.">
         </div>
       </div>
 
