--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
+            <a class="nav-link" href="#Be Inspired">Be Inspired</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Disabled</a>
+            <a class="nav-link" href="#FAQ">FAQ</a>
           </li>
         </ul>
         <form class="form-inline mt-2 mt-md-0">
@@ -45,9 +45,6 @@
         </form>
       </div>
     </nav>
-    <div class="alert alert-warning" role="alert">
-  This is a warning alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
-  </div>
   </header>
 
   <main role="main">
@@ -95,7 +92,7 @@
       </a>
       <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
+        <span class="sr-only" id="Be Inspired">Next</span>
       </a>
     </div>
 
@@ -137,9 +134,9 @@
 
       <!-- START THE FEATURETTES -->
 
-      <hr class="featurette-divider">
+      <hr class="featurette-divider" id="FAQ">
 
-      <div class="row featurette">
+      <div class="row featurette" >
         <div class="col-md-7">
           <h2 class="featurette-heading">Visas, Customs and Quarantine FAQ</h2>
           <p class="lead">Learn about the Filipino visa, customs and quarantine regulations. This includes types of visa applications, what to declare and...</p>
