--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Be Inspired">Be Inspired</a>
+            <a class="nav-link" href="#BeInspired">Be Inspired</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#FAQ">FAQ</a>
@@ -92,7 +92,7 @@
       </a>
       <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only" id="Be Inspired">Next</span>
+        <span class="sr-only" id="BeInspired">Next</span>
       </a>
     </div>
 
@@ -109,25 +109,25 @@
           <img src="./images/Palawan.jpg" alt="A man and a woman snorkeling in the ocean." class="bd-placeholder-img rounded-circle" width="140" height="140">
           <h2>Adventure</h2>
           <p>From bustling cities to stunning beaches and mountains, the Philippines has a lot to offer adventurous explorers.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">Learn More &raquo;</a></p>
+          <p><a class="btn btn-warning btn-secondary" href="#" role="button">Learn More &raquo;</a></p>
         </div><!-- /.col-lg-3 -->
         <div class="col-lg-3">
           <img src="./images/Ilocos_norte.jpg" alt="Picture of Ilocos Norte." class="bd-placeholder-img rounded-circle" width="140" height="140">
           <h2>History</h2>
           <p>The Philippines is full of things to see and do — including museums, parks, theaters, shopping malls and a plethora of restaurants to choose from. </p>
-          <p><a class="btn btn-secondary" href="#" role="button">Learn More &raquo;</a></p>
+          <p><a class="btn btn-warning btn-secondary" href="#" role="button">Learn More &raquo;</a></p>
         </div><!-- /.col-lg-3 -->
         <div class="col-lg-3">
           <img src="./images/singkil.jpg" alt="Dancers performing Singkil dance." class="bd-placeholder-img rounded-circle" width="140" height="140">
           <h2>Culture</h2>
           <p>Philippine folk dancing is a true reflection of daily life in past centuries while enchanting modern audiences at the same time.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">Learn More &raquo;</a></p>
+          <p><a class="btn btn-warning btn-secondary" href="#" role="button">Learn More &raquo;</a></p>
         </div><!-- /.col-lg-3 -->
         <div class="col-lg-3">
           <img src="./images/halohalo.jpg" alt="Halo-halo a traditional Filipino dessert." class="bd-placeholder-img rounded-circle" width="140" height="140">
           <h2>Cuisine</h2>
           <p>Filipino cuisine has developed from the different cultures that shaped its history, with heavy Spanish influence.</p>
-          <p><a class="btn btn-secondary" href="#" role="button">Learn More &raquo;</a></p>
+          <p><a class="btn btn-warning btn-secondary" href="#" role="button">Learn More &raquo;</a></p>
         </div><!-- /.col-lg-3 -->
       </div><!-- /.row -->
 
@@ -180,7 +180,7 @@
     <!-- FOOTER -->
     <footer class="container">
       <p class="float-right"><a href="#">Back to top</a></p>
-      <p>&copy; 2017-2019 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+      <p>&copy; 2020 Department of Tourism &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
   </main>
 </body>
