--- a/index.html
+++ b/index.html
@@ -127,14 +127,14 @@
           <img src="./images/halohalo.jpg" alt="Halo-halo a traditional Filipino dessert." class="bd-placeholder-img rounded-circle" width="140" height="140">
           <h2>Cuisine</h2>
           <p>Filipino cuisine has developed from the different cultures that shaped its history, with heavy Spanish influence.</p>
-          <p><a class="btn btn-warning btn-secondary" href="#" role="button">Learn More &raquo;</a></p>
+          <p><a class="btn btn-warning btn-secondary" href="#" role="button" id="FAQ">Learn More &raquo;</a></p>
         </div><!-- /.col-lg-3 -->
       </div><!-- /.row -->
 
 
       <!-- START THE FEATURETTES -->
 
-      <hr class="featurette-divider" id="FAQ">
+      <hr class="featurette-divider">
 
       <div class="row featurette" >
         <div class="col-md-7">
