--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   <header>
     <nav class="navbar navbar-expand-md fixed-top navbar-light" style="background-color: white;">
       <a class="navbar-brand" href="#">
-  <img src="./images/logo2.png" width="125" class="d-inline-block align-top" alt="It's More Fun In The Philippines Logo">
+  <img src="./images/logo2.png" width="100" class="d-inline-block align-top" alt="It's More Fun In The Philippines Logo">
 </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -43,6 +43,11 @@
         </form>
       </div>
     </nav>
+
+    <div class="alert alert-custom alert-dismissible" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>Latest COVID safe travel information:<a href="#" class="alert-link alert-custom"> click here</a>
+</div>
+
   </header>
 
   <main role="main">
