main changed to div

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
   </header>
 
-  <main role="main">
+  <div role="main">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -185,7 +185,7 @@
       <p class="float-right"><a href="#">Back to top</a></p>
       <p>&copy; 2020 Department of Tourism &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
     </footer>
-  </main>
+  </div>
 </body>
 
 </html>
