--- a/index.html
+++ b/index.html
@@ -59,16 +59,19 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="./images/steep-karst-cliffs-of-el-nido-in-palawan.jpg" alt="Steep Karst cliffs of El Nido in Palawan">
-          <div class="container">
-            <div class="carousel-caption text-left">
-              <h1>Island Hopping Tour</h1>
-              <p>Discover parts of Palawan that are only accessible by boat on an island hopping tour from El Nido. </p>
-              <p><a class="btn btn-warning btn-sm" href="#" role="button">More Info</a></p>
+          <div class="parent d-flex justify-content-center">
+            <img src="./images/steep-karst-cliffs-of-el-nido-in-palawan.jpg" class="img-fluid" alt="Steep Karst cliffs of El Nido in Palawan">
+            <div class="container">
+              <div class="carousel-caption text-left">
+                <h1>Island Hopping Tour</h1>
+                <p>Discover parts of Palawan that are only accessible by boat on an island hopping tour from El Nido. </p>
+                <p><a class="btn btn-warning btn-sm" href="#" role="button">More Info</a></p>
+              </div>
             </div>
           </div>
         </div>
         <div class="carousel-item">
+          <div class="parent d-flex justify-content-center">
           <img src="./images/chocolatehills.jpg" alt="Chocolate hills of of the Island Bohol">
           <div class="container">
             <div class="carousel-caption text-left">
@@ -77,15 +80,18 @@
               <p><a class="btn btn-warning btn-sm" href="#" role="button">Learn more</a></p>
             </div>
           </div>
+          </div>
         </div>
         <div class="carousel-item">
-          <img src="./images/rice_terraces_ifugao.jpg" alt="Rice terraces of Ifugao">
+          <div class="parent d-flex justify-content-center">
+          <img src="./images/rice_terraces_ifugao.jpg" class="img-fluid" alt="Rice terraces of Ifugao">
           <div class="container">
             <div class="carousel-caption text-left">
               <h1>Ifugao Rice Terraces</h1>
               <p>The mountains of the Ifugao province have been cultivated for thousands of years. </p>
               <p><a class="btn btn-warning btn-sm" href="#" role="button">Learn more</a></p>
             </div>
+          </div>
           </div>
         </div>
       </div>
