deleted word from alert

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </nav>
 
     <div class="alert alert-custom alert-dismissible" role="alert">
-  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>Latest COVID safe travel information:<a href="#" class="alert-link alert-custom"> click here</a>
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>Latest COVID travel information:<a href="#" class="alert-link alert-custom"> click here</a>
 </div>
 
   </header>
